# rwalk

./: .gitignore  CMakeLists.txt  build  out_random_walk.txt  randomWalk  result_1e3_20.out  rwalk.cu  rwalk.cuh  rwalk.h  rwalk_kernel.cc  rwalk_modified.cu  slurm-29663128.out  slurm-29663134.out  slurm-29663172.out  slurm-29663177.out  slurm-29667791.out  slurm-29669085.out  slurm-29669616.out  slurm-29670105.out  synth_N_1000_E_20000_S_42_preproc.wel  synth_N_10_E_50_S_42_preproc.wel
_build/: CMakeCache.txt  Makefile  cmake_install.cmake
